feat: pokemons details

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
       </div>
     </section>
 
+    <!-- Pokemons details -->
+    <section class="content-poke">
+      <!-- Details here -->
+    </section>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
